--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,7 @@
 <!-- Create your form here -->
+<form action="/students" method="POST">
+    <label>Student Form</label><br>
+   <label> First Name: <input type="text" name="first_name"></label><br>
+    <label> Last Name: <input type="text" name="last_name"></label><br>
+    <input type="submit" value="Submit Student">
+</form>
