--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,10 @@
-<!-- Create your form here -->
+
+<%= form_tag (@student), method: "POST" do %>
+  <h1>Student Form:</h1>
+  <%= label_tag :first_name %>
+  <%= text_field_tag :first_name %>
+	<%= label_tag :last_name %>
+  <%= text_field_tag :last_name %>
+
+  <%= submit_tag :"Submit Student" %>
+<% end %>
